test/conformance/kuttl/generate/clusterpolicy/cornercases/cpol-data-create-on-trigger-deletion/04-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: cpol-create-on-trigger-deletion-ns
spec:
  policyTypes:
  - Ingress
  - Egress
